--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: ericvan76.github.io
 description: 
 google_analytics: UA-73153112-1
 show_downloads: true
-theme: jekyll-theme-slate
+theme: jekyll-theme-hacker
 
 gems:
   - jekyll-mentions
